# ai_core

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DEV-GUIDE.md  IMPLEMENTATION_PLAN.md  INDEX.md  LICENSE  README.md  SESSION-LOG.md  SYSTEM_DESIGN.md  SYSTEM_DESIGN_EXTRA.md  WAIT_USER.md  WORKFLOWS.md  architecture.md  for_agent.md  hub  progress.md  pyproject.toml  requirements.txt  roadmap.md  usage.md
core_handy/: CMakeLists.txt  README.md  ac_helper.hpp  main.cpp
core_handy/defs/: README.md  axes.hpp
core_handy/defs_review/: 00_index.md  axis_1_entries.md  axis_2_lifecycle.md  axis_3_state.md  axis_4_state_dirs.md  axis_6_interruptible.md  axis_7_guarantee.md  axis_8_dry_run.md  axis_9_nondeterministic.md
core_handy/examples/: llm_entry.cpp  wrapcli.cpp
core_handy/impl/: README.md  cli.hpp  http.hpp  intercept.hpp  io.hpp  llm.hpp  meta_json.hpp  serve.hpp  shell.hpp  state.hpp  taming.hpp
core_handy/impl_remake/: README.md  json.hpp  meta_json.hpp
core_handy/notes/: 00_index.md  axis_1_entries.md  axis_2_lifecycle.md  axis_3_state.md  axis_4_state_dirs.md  axis_5_resources.md  axis_6_interruptible.md  axis_7_guarantee.md  axis_8_dry_run.md  axis_9_nondeterministic.md  impl_1_io.md  impl_overview.md  impl_transaction.md
core_handy/notes/archived/: README.md  axis_3_history.md
sub_projs/cllm/: .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  DEV-GUIDE.md  INDEX.md  README.md  SESSION-LOG.md  WAIT_USER.md  WORKFLOWS.md  install-dev.sh
sub_projs/cllm/apps/: HANDY-PORT-SPEC.md  README.md  overview.html
sub_projs/cllm/apps/cpp-handy/: .gitignore  README.md  build.ps1  build.sh
sub_projs/cllm/apps/cpp-try-1/: .gitignore  README.md  build.sh
sub_projs/cllm/apps/janet-handy/: README.md  wf  zhtw
sub_projs/cllm/apps/janet-try-1/: .gitignore  README.md
sub_projs/cllm/apps/lisp-handy/: .gitignore  README.md  llme  mail  wf
sub_projs/cllm/apps/lisp-try-1/: .gitignore  README.md  lisp-try-1.asd
sub_projs/cllm/apps/lua-try-1/: .gitignore  README.md  main.lua
sub_projs/cllm/apps/python-handy/: .gitignore  README.md  _echo.py  _handy.py  llme  llme.cmd  mail  mail.cmd  wf  wf.cmd  zhtw  zhtw.cmd
sub_projs/cllm/archived/: demo.hpp
sub_projs/cllm/bindings/: README.md
sub_projs/cllm/bindings/c/: example.c  smoke.sh
sub_projs/cllm/bindings/cpp/: example.cpp  llm.hpp  llm_reflect.hpp  smoke.sh
sub_projs/cllm/bindings/fennel/: example.fnl  smoke.sh
sub_projs/cllm/bindings/go/: bridge.c  cllm.go  smoke.sh
sub_projs/cllm/bindings/janet/: smoke.sh
sub_projs/cllm/bindings/lisp/: cllm.lisp  example.lisp  smoke.sh
sub_projs/cllm/bindings/lua/: example.lua  llm.c  smoke.sh
sub_projs/cllm/bindings/python/: example.py  llm.py  smoke.sh
sub_projs/cllm/bindings/s7/: build.sh  example.scm  host.c  llm_s7.c  smoke.sh
sub_projs/cllm/bindings/shell/: example.sh  smoke.sh
sub_projs/cllm/cmake/: cllm.pc.in
sub_projs/cllm/core/: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  INDEX.md  README.md  SESSION-LOG.md  WAIT_USER.md  install-dev.sh  vcpkg.json
sub_projs/cllm/core-py/: README.md  pyproject.toml
sub_projs/cllm/core-py/cllm/: __main__.py  argv.py  cli.py  core.py  media.py  output.py  reqinput.py  request.py
sub_projs/cllm/core-py/test/: cli_smoke.py  smoke_harness.py
sub_projs/cllm/core/bindings/: README.md
sub_projs/cllm/core/docs/: README.md  backend-structured-output.md  c-abi-input.md  c-abi-output.md  c-abi-reference.md  cli-manual.md  cpp-mirror-reference.md  debugging.md  overview.html  platform.md  setup.md
sub_projs/cllm/core/src/: cabi.cpp  cabi.hpp  cabi_context.hpp  cabi_internal.hpp  cabi_request.cpp  cabi_request.h  cabi_response.cpp  cabi_response.h  cabi_response.hpp  cabi_stream.cpp  cli.cpp  cli_config.cpp  cli_config.hpp  cli_flags.cpp  cli_internal.hpp  cli_output.cpp  cli_output.hpp  http.cpp  http.hpp  main.cpp
sub_projs/cllm/core/test/: bindings_smoke.sh  cli_smoke.sh
sub_projs/cllm/core/workflows/: testing.md
sub_projs/cllm/docs/: c-abi-input.md  c-abi-output.md  c-abi-reference.md  cli-manual.md  cpp-mirror-reference.md  overview.html  platform.md
sub_projs/cllm/lab/: .gitignore  GUIDE.md  README.md  cheatsheet.html
sub_projs/cllm/lab/c/: compile_flags.txt  play.c  run.sh
sub_projs/cllm/lab/cpp/: play.cpp  run.ps1  run.sh
sub_projs/cllm/lab/fennel/: play.fnl
sub_projs/cllm/lab/go/: go.mod  main.go
sub_projs/cllm/lab/janet/: project.janet  run.sh
sub_projs/cllm/lab/lisp/: play.lisp
sub_projs/cllm/lab/lua/: run.sh
sub_projs/cllm/lab/python/: play.py  run.ps1  run.sh
sub_projs/cllm/lab/s7/: play.scm  run.sh
sub_projs/cllm/lab/shell/: run.sh
sub_projs/cllm/src/: cabi.cpp  cabi.h  cabi.hpp  cabi_request.cpp  cabi_request.h  cabi_request.hpp  cabi_response.cpp  cli.cpp  cli.hpp  cli_config.cpp  cli_config.hpp  cli_flags.cpp  cli_flags.hpp
sub_projs/cllm/test/: bindings_smoke.sh  cli_smoke.sh
sub_projs/cllm/tools/: CMakeLists.txt  INTEGRATION.md  README.md
sub_projs/cllm/tools/anthropic-proxy/: README.md  translate.hpp  translate.py
sub_projs/cllm/tools/common/: httpd.cpp  httpd.hpp
sub_projs/cllm/tools/llm-login/: README.md  crypto.cpp  llm_login.py  login.pc.in  login_cli.cpp  oauth.cpp  oauth.example.json  oauth.hpp  oauth.py  store.hpp  store.py  test_offline.cpp  test_offline.py
sub_projs/cllm/workflows/: testing.md
sub_projs/cllm/workflows/common/: README.md  conventions.md  gotchas.md
sub_projs/cllm/workflows/feature-dev/: README.md
sub_projs/galtxt/try_3/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  advice.hpp  advice_cpp.hpp  vcpkg.json
sub_projs/galtxt/try_3/archived/: cli.cpp  cli.hpp  demo.cpp  llm_json.cpp  llm_json.hpp
sub_projs/galtxt/try_3/src/: cabi.cpp  cabi.h  cabi.hpp  cabi_client.h  cabi_context.h  cabi_internal.hpp  cabi_request.cpp  cabi_response.h  cli.cpp  (+15 more)
sub_projs/galtxt/try_4/: CMakeLists.txt  CMakePresets.json  README.md
sub_projs/handy/cllm-py/: .gitignore  README.md  pyproject.toml
sub_projs/handy/llme/: .gitignore  CMakeLists.txt  README.md  _exec  _exec.fnl  main.cpp
sub_projs/handy/pllm/: pyproject.toml
(+1276 files in other folders)
