# pyproject.toml — pllm（handy 的 LLM 地基；cllm 的純 Python 版）的封裝。
# 源出 cllm/core-py（見 README「來源」）；handy 住戶 `pip install -e` 本資料夾來相依。
#
# 相依政策：刻意維持「零外部相依」——工作量（單次 POST ＋ SSE 逐行拆框）標準庫 urllib/json 就
# 乾淨覆蓋，換得零安裝、跨平台、小而免開發環境。若日後要連線池／HTTP2／重試策略，再引 httpx 才划算。
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pllm"
version = "0.1.0"
description = "cllm 的純 Python 版（handy 的 LLM 地基）：直接打 OpenAI 相容 /chat/completions（不碰 C ABI）"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []  # 刻意維持零外部相依（見檔頭權衡）

[project.scripts]
pllm = "pllm.cli:_entry"

[tool.setuptools]
packages = ["pllm"]
